Replace neo4j logging settings with log4j configuration files
* Add log4j JSON template layout as a dependency

* Replace neo4j logging settings with log4j configuration files
To allow for greater flexibility and support for many features that log4j offers out of the box we have removed settings to configure logging from neo4j.conf and moved them out to log4j XML configuration files. They will reside in conf/logging/*.xml and all files are part of the tarball.

* Partly restore "neo4j console" behavior
Invoking console will now both write to neo4j.log and stdout. When running in service mode, "neo4j start", the stdout output is suppressed.
Ideally, we should try to get rid of console mode, but this will be hard since docker/dep/rpm all rely on it.

* Add test for console command behavior